force-app/main/default/objects/sumoapp__Invite__c/sumoapp__Invite__c.object-meta.xml
<CustomObject>
    <label>SUMO Appt Invite</label>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Appt Link #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Appt Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>