force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__AllowAnyAvailability__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AllowAnyAvailability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Any Availability</label>
    <type>Checkbox</type>
</CustomField>