force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__AppointmentType__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AppointmentType__c</fullName>
    <label>Appointment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>