force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__AvailabilityOption__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AvailabilityOption__c</fullName>
    <label>Time Option</label>
    <type>TextArea</type>
</CustomField>