force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__BufferTimePre__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BufferTimePre__c</fullName>
    <inlineHelpText>If set, SUMO will create a Pre-Buffer appointment before the scheduled appointment, to give the Host a buffer.</inlineHelpText>
    <label>Pre-Buffer Time (Minutes)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>