force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EndDateTime__c</fullName>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>