force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ExpirationDate__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>