force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__IncludeWebConfDetails__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IncludeWebConfDetails__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Include Video Conference Details</inlineHelpText>
    <label>Include Video Conf Details?</label>
    <type>Checkbox</type>
</CustomField>