force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__InviteLink__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__InviteLink__c</fullName>
    <label>Invite Link</label>
    <type>TextArea</type>
</CustomField>