force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__LimitOfAppointments__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__LimitOfAppointments__c</fullName>
    <label>Limit of Appointments</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>