force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__LocationDetails__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__LocationDetails__c</fullName>
    <label>Location Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>