force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__LocationType__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__LocationType__c</fullName>
    <label>Location Type</label>
    <type>TextArea</type>
</CustomField>