force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__MatchOnObject__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__MatchOnObject__c</fullName>
    <label>Create/Match On</label>
    <type>TextArea</type>
</CustomField>