force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__Organizer__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Organizer__c</fullName>
    <label>Host ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>