force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__OrganizerName__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__OrganizerName__c</fullName>
    <label>Organizer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>