force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__OrganizerTitle__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__OrganizerTitle__c</fullName>
    <label>Organizer Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>