force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__PrimaryClient__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__PrimaryClient__c</fullName>
    <label>Primary Participant</label>
    <length>18</length>
    <type>Text</type>
</CustomField>