force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__Process__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process #</label>
    <referenceTo>sumoapp__Process__c</referenceTo>
    <relationshipLabel>Invites</relationshipLabel>
    <relationshipName>Invites</relationshipName>
    <type>Lookup</type>
</CustomField>