force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__RelatedTo__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RelatedTo__c</fullName>
    <label>Related To</label>
    <length>18</length>
    <type>Text</type>
</CustomField>