force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__ResourcePoolPriorityLevel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ResourcePoolPriorityLevel__c</fullName>
    <label>Resource Pool Priority Level</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>