force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__RollingWindow__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RollingWindow__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Rolling Window</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>