force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__Service__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>sumoapp__Service__c</referenceTo>
    <relationshipLabel>Service Invites</relationshipLabel>
    <relationshipName>ServiceInvites</relationshipName>
    <type>Lookup</type>
</CustomField>