force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__StartDatetime__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__StartDatetime__c</fullName>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>