force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__TimeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__TimeZoneSidKey__c</fullName>
    <label>TimeZoneSidKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>