force-app/main/default/objects/sumoapp__Invite__c/fields/sumoapp__VideoConferenceDetailsType__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__VideoConferenceDetailsType__c</fullName>
    <label>Video Conference Details Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Host</fullName>
                <default>true</default>
                <label>Host</label>
            </value>
            <value>
                <fullName>Primary Participant</fullName>
            </value>
            <value>
                <fullName>Get details from the Host</fullName>
                <isActive>false</isActive>
                <label>Get details from the Host</label>
            </value>
            <value>
                <fullName>Let primary client provide his link</fullName>
                <isActive>false</isActive>
                <label>Let primary client provide his link</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>