force-app/main/default/objects/sumoapp__Invite__c/recordTypes/sumoapp__EmailInvite.recordType-meta.xml
<RecordType>
    <fullName>sumoapp__EmailInvite</fullName>
    <active>true</active>
    <label>Appt Link</label>
</RecordType>