force-app/main/default/objects/sumoapp__Invite__c/recordTypes/sumoapp__InviteLink.recordType-meta.xml
<RecordType>
    <fullName>sumoapp__InviteLink</fullName>
    <active>true</active>
    <label>Invite Link</label>
</RecordType>