force-app/main/default/objects/sumoapp__Invite__c/listViews/sumoapp__All.listView-meta.xml
<ListView>
    <fullName>sumoapp__All</fullName>
    <columns>NAME</columns>
    <columns>sumoapp__AppointmentType__c</columns>
    <columns>sumoapp__Service__c</columns>
    <columns>sumoapp__DurationOptions__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Invite Links</label>
</ListView>