force-app/main/default/objects/sumoapp__Invite__c/listViews/sumoapp__MyInviteLinks.listView-meta.xml
<ListView>
    <fullName>sumoapp__MyInviteLinks</fullName>
    <columns>NAME</columns>
    <columns>sumoapp__AppointmentType__c</columns>
    <columns>sumoapp__Service__c</columns>
    <columns>sumoapp__DurationOptions__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Invite Links</label>
</ListView>