force-app/main/default/objects/sumoapp__Invite__c/listViews/sumoapp__MyRecentlyCreatedInviteLinks.listView-meta.xml
<ListView>
    <fullName>sumoapp__MyRecentlyCreatedInviteLinks</fullName>
    <columns>NAME</columns>
    <columns>sumoapp__AppointmentType__c</columns>
    <columns>sumoapp__Service__c</columns>
    <columns>sumoapp__DurationOptions__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>My Recently Created Invite Links</label>
</ListView>